--- a/guacamole/src/main/webapp/app/login/templates/login.html
+++ b/guacamole/src/main/webapp/app/login/templates/login.html
@@ -32,7 +32,7 @@
 
                 <!-- Guacamole version -->
                 <div class="logo"></div>
-                <div class="version">{{'APP.NAME' | translate}}</div>
+                <div class="version">ATUMSOFT</div>
 
                 <!-- Login message/instructions -->
                 <p ng-show="helpText">{{helpText | translate}}</p>
