- added required fonts - updated necessary fonts - updating coloring - updating styling to be more minimal

--- a/guacamole/src/main/webapp/app/client/styles/filesystem-menu.css
+++ b/guacamole/src/main/webapp/app/client/styles/filesystem-menu.css
@@ -53,7 +53,7 @@
 }
 
 #filesystem-menu .header.breadcrumbs .breadcrumb:hover {
-    background-color: #CDA;
+    background-color: #9ed3ff;
     cursor: pointer;
 }
 
