--- a/guacamole/src/main/webapp/app/index/styles/lists.css
+++ b/guacamole/src/main/webapp/app/index/styles/lists.css
@@ -45,7 +45,7 @@
 }
 
 .recent-connections .connection:hover {
-    background: #CDA;
+    background: #9ed3ff;
 }
 
 .recent-connections .connection .thumbnail {
