--- a/guacamole/src/main/webapp/app/navigation/styles/page-tabs.css
+++ b/guacamole/src/main/webapp/app/navigation/styles/page-tabs.css
@@ -45,7 +45,7 @@
 }
 
 .page-tabs .page-list li a[href]:hover {
-    background-color: #CDA;
+    background-color: #9ed3ff;
 }
 
 .page-tabs .page-list li a[href].current,
