--- a/guacamole/src/main/webapp/app/index/styles/buttons.css
+++ b/guacamole/src/main/webapp/app/index/styles/buttons.css
@@ -33,8 +33,8 @@ input[type="submit"], button, a.button {
     color: white;
     text-shadow: -1px -1px rgba(0, 0, 0, 0.3);
     font-size: 1em;
-    font-weight: bold;
-    font-family: Carlito, FreeSans, Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    font-family: Roboto, Carlito, FreeSans, Helvetica, Arial, sans-serif;
 
     padding: 0.35em 1em;
     min-width: 5em;
