--- a/guacamole/src/main/webapp/app/index/styles/headers.css
+++ b/guacamole/src/main/webapp/app/index/styles/headers.css
@@ -22,25 +22,26 @@ h1 {
     margin: 0;
     padding: 0.5em;
 
-    font-size: 2em;
+    font-size: 3em;
     vertical-align: middle;
     text-align: center;
 
 }
 
 h2 {
-    font-size: 1.25em;
-    font-weight: bold;
+    font-size: 1.75em;
+    font-weight: normal;
     text-transform: uppercase;
-    padding: 0.5em;
+    padding: 0.2em 0.2em;
     margin: 0;
+    color: #113A72;
 }
 
 .header {
 
-    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125);
-    background: rgba(0, 0, 0, 0.04);
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.125); */
+    /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125); */
+    background: rgba(77, 176, 255, 0);
 
     margin-bottom: 1em;
     margin-top: 0;
