--- a/guacamole/src/main/webapp/app/index/styles/ui.css
+++ b/guacamole/src/main/webapp/app/index/styles/ui.css
@@ -26,7 +26,7 @@
 
 body {
     background: white;
-    font-family: Carlito, FreeSans, Helvetica, Arial, sans-serif;
+    font-family: Roboto, Carlito, FreeSans, Helvetica, Arial, sans-serif;
     padding: 0;
     margin: 0;
 }
@@ -122,7 +122,7 @@ div.section {
 }
 
 .list-item:not(.selected) .caption:hover {
-    background: #CDA;
+    background: #9ed3ff;
 }
 
 .choice .list-item {
