--- a/guacamole/src/main/webapp/app/login/styles/dialog.css
+++ b/guacamole/src/main/webapp/app/login/styles/dialog.css
@@ -31,6 +31,8 @@
     display: table-cell;
     vertical-align: middle;
     text-align: center;
+    background: #113A72;
+    color: white;
 }
 
 .login-ui div.login-dialog {
@@ -44,9 +46,10 @@
     text-align: left;
     padding: 1em;
     border: 1px solid rgba(0, 0, 0, 0.25);
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 2px 2px 1px rgba(0,0,0,0.25);
     font-size: 1.25em;
-
+    background: white;
+    border-radius: 5px;
     display: inline-block;
 }
 
@@ -96,7 +99,6 @@
     border-radius: 0.5em;
 
     color: white;
-    background: green;
     font-size: 0.5em;
     font-style: italic;
     opacity: 0.5;
@@ -105,13 +107,14 @@
 
 .login-ui .login-dialog .logo {
     display: block;
-    margin: 0.5em auto;
-    width: 3em;
-    height: 3em;
-    background-size:         3em 3em;
-    -moz-background-size:    3em 3em;
-    -webkit-background-size: 3em 3em;
-    -khtml-background-size:  3em 3em;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10.04em;
+    height: 10.05em;
+    background-size: 10em 10em;
+    -moz-background-size: 10em 10em;
+    -webkit-background-size: 10em 10em;
+    -khtml-background-size: 10em 10em;
     background-image: url("images/guac-tricolor.png");
 }
 
