--- a/guacamole/src/main/webapp/app/login/styles/input.css
+++ b/guacamole/src/main/webapp/app/login/styles/input.css
@@ -23,7 +23,7 @@
     -moz-border-radius: 0.2em;
     -webkit-border-radius: 0.2em;
     -khtml-border-radius: 0.2em;
-    font-family: Carlito, FreeSans, Helvetica, Arial, sans-serif;
+    font-family: Roboto, Carlito, FreeSans, Helvetica, Arial, sans-serif;
     border-radius: 0.2em;
     width: 100%;
     margin: 0;
